# ai-analysis-service

./: .dockerignore  Dockerfile  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/core/: config.py
app/ml/contracts/: __init__.py  feature_contracts.py  label_mappings.py  metadata_loader.py  model_loader.py  schema_validator.py  thresholds.py
app/ml/predictors/: financial_risk_predictor.py
app/ml/training/: train_anomaly_detector.py  train_forecaster.py  train_profiler.py
tests/: conftest.py  test_feature_contracts.py  test_metadata_loader.py  test_model_loader.py  test_schema_validator.py  test_thresholds.py
